# analyzer

./: .gitignore  CMakeLists.txt  Sample  Types.h  dump.cpp  dump.h  dumper_settings.cpp  dumper_settings.h  file_operations.cpp  file_operations.h  finder.cpp  finder.h  main.cpp  read_options.cpp  read_options.h  temp  types.h  utilities.cpp  utilities.h
Docs/: Sample  ideas
